apply file context
ensure context is applied (even if files already present)

--- a/installer/roles/local_docker/tasks/compose.yml
+++ b/installer/roles/local_docker/tasks/compose.yml
@@ -28,6 +28,9 @@
     mode: 0600
   register: awx_secret_key
 
+- name: Apply new SELinux file context to filesystem
+  command: "restorecon -irv {{ docker_compose_dir }}"
+
 - name: Start the containers
   docker_service:
     project_src: "{{ docker_compose_dir }}"
