--- a/installer/roles/local_docker/tasks/compose.yml
+++ b/installer/roles/local_docker/tasks/compose.yml
@@ -5,7 +5,7 @@
     state: directory
     
 - name: manage SELinux mischief
-  sefcontext
+  sefcontext:
     target: "{{ docker_compose_dir }}"
     setype: container_file_t
     state: present
